[package]
name = "jpt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cli", "pivot", "table"]
categories = ["command-line-utilities"]
description = "A simple cli tool to perform pivot operation on csv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
